# Steelworker

./: .env.example  .gitignore  docker-compose.yml
backend/: Dockerfile  pyproject.toml  requirements.txt
backend/app/: __init__.py  config.py  database.py  main.py
backend/app/models/: __init__.py  data_completeness.py  inspection.py  lot.py  production.py  shipping.py
backend/app/repositories/: __init__.py  lot_repo.py  report_repo.py
backend/app/routers/: __init__.py  lots.py  reports.py
backend/app/schemas/: __init__.py  lot.py  reports.py
backend/tests/: __init__.py  conftest.py  test_lots.py  test_reports.py
data/: Ops_Production_Log.xlsx  Ops_Shipping_Log.xlsx
db/: sample_queries.sql  schema.sql  seed.sql
docs/: architecture_decision_records.md  assumptions_scope.md  data_design.md  tech_stack_decision_records.md
frontend/: Dockerfile  index.html  nginx.conf  package.json  postcss.config.js  tailwind.config.js  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx  vite-env.d.ts
frontend/src/api/: client.ts
frontend/src/components/layout/: Navbar.tsx
frontend/src/components/shared/: CompletenessIndicator.tsx  DateRangeFilter.tsx  IncompleteLotsTable.tsx  InspectionIssuesTable.tsx  LineIssuesTable.tsx  LotSummaryTable.tsx  MissingDataBadge.tsx
frontend/src/pages/: DashboardPage.tsx  LotDetailPage.tsx
frontend/src/types/: index.ts
frontend/tests/: CompletenessIndicator.test.tsx  DateRangeFilter.test.tsx  MissingDataBadge.test.tsx  setup.ts
