# pyproject.toml
#
# Poetry project manifest.
# Poetry is Python's modern dependency manager — like npm for JavaScript.
#
# Common commands (run from the backend/ directory):
#   poetry install                              → install all dependencies
#   poetry run pytest                          → run tests
#   poetry run uvicorn app.main:app --reload   → run dev server with auto-reload
#   poetry add <package>                       → add a new dependency

[tool.poetry]
name         = "steelworks-ops-backend"
version      = "0.1.0"
description  = "Operations Analytics API — aligns Production, Inspection, and Shipping data by Lot ID."
authors      = ["Your Name <your.email@example.com>"]   # ← Change this to your name
license      = "MIT"
package-mode = false   # This is an application, not a distributable package

# ── Runtime dependencies ──────────────────────────────────────────────────────
[tool.poetry.dependencies]
python           = "^3.11"
fastapi          = "^0.111.0"    # Web framework
uvicorn          = {extras = ["standard"], version = "^0.30.0"}  # ASGI server
sqlalchemy       = "^2.0.0"     # ORM (Object-Relational Mapper)
psycopg2-binary  = "^2.9.9"     # PostgreSQL adapter
pydantic-settings = "^2.3.0"   # Typed settings from environment variables
python-dotenv    = "^1.0.0"     # .env file loading

# ── Development dependencies ───────────────────────────────────────────────────
# These are only installed locally (not in Docker).
[tool.poetry.group.dev.dependencies]
pytest           = "^8.2.0"    # Test runner
pytest-asyncio   = "^0.23.0"  # Async test support
httpx            = "^0.27.0"  # HTTP client used by FastAPI's TestClient
pytest-cov       = "^5.0.0"   # Code coverage reports

[build-system]
requires      = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# ── pytest configuration ───────────────────────────────────────────────────────
[tool.pytest.ini_options]
testpaths  = ["tests"]         # Where pytest looks for test files
asyncio_mode = "auto"          # Automatically handle async test functions
addopts    = "-v --tb=short"   # Verbose output; short traceback on failures
